Finish the first steps of routing

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Open Weather Map App</title>
+    <base href="/app" />
 </head>
 <body>
+		<a href="#/cities/New%20York">New York</a>
+    <a href="#/cities/Dallas">Dallas</a>
+    <a href="#/cities/Chicago">Chicago</a>
 
     <div ng-view></div>
 
