--- a/app/city.html
+++ b/app/city.html
@@ -1,2 +1,4 @@
-<h1>Welcome to {{ city }}</h1>
-<p>Nice that you came to visit...</p>
+<div>
+	<h1>Welcome to {{ city.city }}</h1>
+	<p>Nice that you came to visit...</p>
+</div>
